--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
-    "@nestjs/passport": "10.0.3",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
@@ -41,8 +41,8 @@
     "mysql2": "3.11.0",
     "nodemailer": "6.9.14",
     "otplib": "^12.0.1",
-    "passport": "0.7.0",
-    "passport-local": "1.0.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "path": "0.12.7",
     "pg": "^8.13.0",
     "reflect-metadata": "0.2.0",
@@ -60,7 +60,7 @@
     "@types/multer": "1.4.11",
     "@types/node": "20.3.1",
     "@types/nodemailer": "6.4.15",
-    "@types/passport-local": "1.0.38",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "6.0.0",
     "@types/uuid": "10.0.0",
     "@typescript-eslint/eslint-plugin": "8.0.0",
