--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "handlebars": "4.7.8",
+    "kill-port-process": "^3.2.1",
     "moment": "^2.30.1",
     "mysql2": "3.11.0",
     "nodemailer": "6.9.14",
@@ -47,7 +48,7 @@
     "pg": "^8.13.0",
     "reflect-metadata": "0.2.0",
     "rxjs": "7.8.1",
-    "typeorm": "^0.3.20",
+    "typeorm": "0.3.20",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
