--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "2.0.2",
+    "@nestjs/bull": "^10.2.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
@@ -36,6 +37,7 @@
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "5.1.1",
+    "bull": "^4.16.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "handlebars": "4.7.8",
