--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.4.4",
     "@nestjs/schedule": "^4.1.1",
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
@@ -40,9 +40,12 @@
     "bull": "^4.16.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
+    "cloudinary": "^1.41.3",
     "handlebars": "4.7.8",
     "kill-port-process": "^3.2.1",
     "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "3.11.0",
     "nodemailer": "6.9.14",
     "otplib": "^12.0.1",
